--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,15 @@
 name: champions
-description: A starting point for Dart libraries or applications.
+description: >-
+  A Dart library for the League of Legends static data or Data Dragon database
+
 # version: 1.0.0
-# homepage: https://www.example.com
+homepage: https://github.com/ptejada/champions
 
 environment:
   sdk: '>=2.8.1 <3.0.0'
 
-#dependencies:
-#  path: ^1.7.0
+dependencies:
+  strings: ^0.1.2
 
 dev_dependencies:
   build_runner: '>=1.6.2 <2.0.0'
