--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,14 +2,14 @@ name: champions
 description: >-
   A Dart library for the League of Legends static data or Data Dragon database
 
-# version: 1.0.0
+version: 1.0.0-dev
 homepage: https://github.com/ptejada/champions
 
 environment:
   sdk: '>=2.8.1 <3.0.0'
 
 dependencies:
-  strings: ^0.1.2
+  http: ^0.12.1
 
 dev_dependencies:
   build_runner: '>=1.6.2 <2.0.0'
