--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: champions
 description: >-
   A Dart library for the League of Legends static data or Data Dragon database
 
-version: 1.0.0-dev
+version: 0.1.0
 homepage: https://github.com/ptejada/champions
 
 environment:
