--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: champions
 description: >-
-  A Dart library for the League of Legends static data or Data Dragon database
+  A Dart library for the League of Legends (LoL) static data or Data Dragon database
 
-version: 0.1.1
+version: 0.1.2
 homepage: https://github.com/ptejada/champions
 
 environment:
